--- a/ExpenseT/ExpenseT/ExpenseT.csproj
+++ b/ExpenseT/ExpenseT/ExpenseT.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>Page2Page.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
