--- a/ExpenseT/ExpenseT/ExpenseT.csproj
+++ b/ExpenseT/ExpenseT/ExpenseT.csproj
@@ -138,6 +138,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
